placeholder for build-vm
Change-Id: I5a9e31d1464222f8ae28710895bf8803c72c0ed1
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/sushy/tasks/main.yml
+++ b/roles/sushy/tasks/main.yml
@@ -69,13 +69,7 @@
                       value: openstack:nova-api
                     - name: DEPENDENCY_DAEMONSET
                       value: openstack:libvirt
-                  command: ["/bin/bash"]
-                  args:
-                    - |
-                      set -ex
-
-                      cat <<EOF > /tmp/emulator.conf
-                      EOF
+                  command: ["/bin/bash", "echo", "good"]
                   volumeMounts:
                     - name: pod-tmp
                       mountPath: /tmp
