add missing config
Change-Id: I3ac562ed2e9484edee82151cb444289a7e601564
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/sushy/tasks/main.yml
+++ b/roles/sushy/tasks/main.yml
@@ -71,6 +71,9 @@
                       value: openstack:libvirt
                   command: ["/bin/sh", "-c", "cat /etc/ironic/redfish/emulator.conf"]
                   volumeMounts:
+                    - name: config-sushy
+                      mountPath: /etc/ironic/redfish/emulator.conf
+                      subPath: emulator.config
                     - name: pod-tmp
                       mountPath: /tmp
                     - name: libvirt-etc
