--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -247,13 +247,12 @@ ironic_helm_values:
   conf:
     ironic:
       DEFAULT:
-        default_network_interface: neutron
+        # for virtual bmc
+        enabled_network_interfaces: flat, noop
       conductor:
-        clean_step_priority_override:
-          - raid.delete_configuration:15
-          - deploy.erase_devices_express:10
-          - raid.create_configuration:5
         power_state_change_timeout: 120
+        # for virtual bmc
+        automated_clean: false
       service_catalog:
         endpoint_override: "http://172.24.6.254:31770"
 
@@ -280,8 +279,8 @@ ironic_bare_metal_subnet_cidr: 172.24.6.0/24
 #     git pull https://review.opendev.org/openstack/ironic-python-agent refs/changes/22/953122/2
 #     DIB_REPOLOCATION_ironic_python_agent=/root/dib/IPA-path/ironic-python-agent DIB_REPOREF_ironic_python_agent=master ironic-python-agent-builder -o test-ipa --release 9-stream centos
 # PS: these images should be public, but being uploaded as private. Ive seen this happening with private images: https://gist.github.com/guilhermesteinmuller/87ffd22d7546a179e183e03c6c356a54
-ironic_python_agent_deploy_kernel_name: ipa-centos9-zed-RAID-953122.kernel
-ironic_python_agent_deploy_kernel_url: https://object-storage.public.mtl1.vexxhost.net/swift/v1/cb977ab387744a86bf4145f3bf1308d4/IPA-raid-953122/ipa-centos9-zed-RAID-953122.kernel
-ironic_python_agent_deploy_ramdisk_name: ipa-centos9-zed-RAID-953122.initramfs
+ironic_python_agent_deploy_kernel_name: ir-deploy-redfish.kernel
+ironic_python_agent_deploy_kernel_url: https://tarballs.openstack.org/ironic-python-agent/dib/files/ipa-centos9-master.kernel
+ironic_python_agent_deploy_ramdisk_name: ir-deploy-redfish.initramfs
 # yamllint disable-line rule:line-length
-ironic_python_agent_deploy_ramdisk_url: https://object-storage.public.mtl1.vexxhost.net/swift/v1/cb977ab387744a86bf4145f3bf1308d4/IPA-raid-953122/ipa-centos9-zed-RAID-953122.initramfs
+ironic_python_agent_deploy_ramdisk_url: https://tarballs.openstack.org/ironic-python-agent/dib/files/ipa-centos9-master.initramfs
