switch node port
Change-Id: I89534a56a7f28f28fe325648b07e34df1fdfcae4
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -254,7 +254,8 @@ ironic_helm_values:
         # for virtual bmc
         automated_clean: false
       service_catalog:
-        endpoint_override: "http://172.24.6.254:31770"
+        # depends on which port your Nodeport pick
+        endpoint_override: "http://172.24.6.254:32574"
 
       # For virtual host
       neutron:
