set api workers to 1
Change-Id: I5f18bf0dfc8081519f38ce40b3b34048312458a0
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -246,6 +246,8 @@ horizon_helm_values:
 ironic_helm_values:
   conf:
     ironic:
+      api:
+        api_workers: 1
       agent:
         # for virtual bmc
         deploy_logs_collect: always
