allow enable sushy and ironic
Change-Id: Ibbc2f10fedfd50b435f0c42c2dfffad7b6effe5a
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -135,6 +135,16 @@
       tags:
         - octavia
 
+    - role: ironic
+      when: ((atmosphere_baremetal_emulator_enabled | default(false)) or (atmosphere_baremetal_enabled | default(false)))
+      tags:
+        - ironic
+
+    - role: sushy
+      when: atmosphere_baremetal_emulator_enabled | default(false)
+      tags:
+        - sushy
+
     - role: magnum
       tags:
         - magnum
