--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -246,6 +246,10 @@ horizon_helm_values:
 ironic_helm_values:
   conf:
     ironic:
+      DEFAULT:
+        debug: "{{ lookup('env', 'ATMOSPHERE_DEBUG') | default('false', True) }}"
+        debug_tracebacks_in_api: "{{ lookup('env', 'ATMOSPHERE_DEBUG') | default('false', True) }}"
+        pecan_debug: "{{ lookup('env', 'ATMOSPHERE_DEBUG') | default('false', True) }}"
       api:
         api_workers: 1
       agent:
@@ -268,6 +272,9 @@ ironic_helm_values:
     replicas:
       api: 1
       conductor: 1
+
+atmosphere_baremetal_emulator_enabled: "{{ lookup('env', 'ATMOSPHERE_BAREMETAL_EMULATOR_ENABLED') | default('false', True) }}"
+atmosphere_baremetal_enabled: "{{ lookup('env', 'ATMOSPHERE_BAREMETAL_ENABLED') | default('false', True) }}"
 
 ironic_bare_metal_network_manage: true
 ironic_bare_metal_network_name: baremetal
