Expose ironic api node port
Change-Id: I1d536947ed4f87f3c681b6e0535511353969d77a
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/ironic/tasks/main.yml
+++ b/roles/ironic/tasks/main.yml
@@ -95,3 +95,24 @@
     openstack_helm_ingress_service_port: 6385
     openstack_helm_ingress_annotations: "{{ ironic_ingress_annotations }}"
     openstack_helm_ingress_class_name: "{{ ironic_ingress_class_name }}"
+
+- name: Expose Ironic API with node port
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      - apiVersion: v1
+        kind: Service
+        metadata:
+          name: ironic-api-nodeport
+          namespace: openstack
+        spec:
+          type: NodePort
+          selector:
+            application: ironic
+            component: api
+          ports:
+            - name: http
+              port: 6385
+              targetPort: 6385
+              nodePort: 32574
+              protocol: TCP
