correct baremetal flavor
Change-Id: I341393b593c98b77d35fd721c69f90fb5db39350
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -331,11 +331,17 @@
             disk: 160
             vcpus: 8
           - name: "baremetal"
-            ram: 0
-            disk: 0
-            vcpus: 0
+            ram: 2500
+            disk: 10
+            vcpus: 1
             extra_specs:
-              "CUSTOM_BAREMETAL": 1
+              "resources:CUSTOM_BAREMETAL": 1
+              "resources:DISK_GB": 0
+              "resources:MEMORY_MB": 0
+              "resources:VCPU": 0
+              "cpu_arch": 'x86_64'
+              "capabilities:boot_mode": 'uefi'
+              "trait:CUSTOM_GOLD": 'required'
 
     - name: Write new Nova configuration file to disk
       ansible.builtin.copy:
