fix ironic-emmulator-nodes name
Change-Id: I99c1a0110cdaaf03e4abbb70b2573e539a3ed458
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -150,10 +150,10 @@
       tags:
         - ironic
 
-    - role: ironic-emmulator-node
+    - role: ironic-emmulator-nodes
       when: atmosphere_baremetal_emulator_enabled | default(false)
       tags:
-        - ironic-emmulator-node
+        - ironic-emmulator-nodes
 
     - role: magnum
       tags:
