add missing node-0 path
Change-Id: Ic6a62aabfc3c8b8ef44127f3b07215eaebcca57a
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/ironic-emmulator-nodes/tasks/main.yml
+++ b/roles/ironic-emmulator-nodes/tasks/main.yml
@@ -364,7 +364,7 @@
     namespace: openstack
     pod: "{{ libvirt_pod.resources[0].metadata.name }}"
     container: libvirt
-    command: virsh define node-0.xml
+    command: virsh define /var/lib/libvirt/node-0.xml
   when: libvirt_pod.resources | length > 0
 
 - name: Create virtual baremetal node - start node-0
@@ -380,7 +380,7 @@
     namespace: openstack
     pod: "{{ libvirt_pod.resources[0].metadata.name }}"
     container: libvirt
-    command: virsh define node-1.xml
+    command: virsh define /var/lib/libvirt/node-1.xml
   when: libvirt_pod.resources | length > 0
 
 - name: Create virtual baremetal node - start node-1
